# cmake_vcpkg_test

./: CMakeLists.txt  TestPkg.cpp  TestPkg.h
